# example_kafka

./: Dockerfile  README.md  docker-compose.yaml  kafka_consumer.py  kafka_producer.py  pyproject.toml  run.sh
apps/consumer/: Dockerfile
apps/producer/: kafka_producer.py  requirements.txt  run_producer.sh
docker/consumer/: Dockerfile  kafka_consumer.py  run_consumer.sh
docker/producer/: Dockerfile  kafka_producer.py  requirements.txt  settings.py
