[tool.poetry]
name = "example-kafka"
version = "0.1.0"
description = ""
authors = ["Ned Webster <edwardpwebster@gmail.com>"]
readme = "README.md"
packages = [{include = "example_kafka"}]

[tool.poetry.dependencies]
python = "^3.9"
confluent-kafka = "^2.1.0"
faker = "^18.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
